# kelvane

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/kelvane-runtime/: Cargo.toml  README.md
crates/kelvane-runtime/examples/: bench.rs  bench_e2e.rs
crates/kelvane-runtime/src/: host.rs  inference.rs  lib.rs
crates/kelvane-runtime/tests/: adversarial.rs  end_to_end.rs  generality.rs
crates/kelvane-runtime/tests/common/: mod.rs
crates/kelvane-runtime/tests/models/: digits_cnn.onnx  digits_samples.json  generate.py  generate_digits.py  img_3x8x8.onnx  mlp_16.onnx  policy_4x11x11.onnx
crates/kelvane-sdk/: Cargo.toml  README.md
crates/kelvane-sdk/src/: lib.rs
examples/kelvane-demo/: Cargo.toml
examples/kelvane-demo/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: abi_decode.rs  infer_decode.rs
kelvane-marl/: README.md  pyproject.toml
kelvane-marl/kelvane_marl/: __init__.py  env_grid.py  env_vec.py  evaluate.py  export_onnx.py  mappo.py  paths.py  qmix.py
kelvane-marl/tests/: test_onnx_export.py  test_train_smoke.py
modules/policy-module/: Cargo.toml
modules/policy-module/src/: lib.rs
modules/scripted-module/: Cargo.toml
modules/scripted-module/src/: lib.rs
