[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kelvane-marl"
version = "0.1.0"
description = "A compact, reproducible multi-agent RL reference: MAPPO/QMIX, a GPU-capable vectorized cooperative gridworld, and ONNX policy export."
authors = [{ name = "Muhammad Rakibul Islam" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["reinforcement-learning", "mappo", "qmix", "onnx", "multi-agent", "gridworld"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy", "torch", "gymnasium", "pettingzoo"]

[project.urls]
Homepage = "https://github.com/rakib-nyc/kelvane"
Repository = "https://github.com/rakib-nyc/kelvane"

[project.optional-dependencies]
onnx = ["onnx", "onnxruntime"]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["kelvane_marl*"]
