[package]
name = "kelvane-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Guest SDK and host/guest ABI for Kelvane WebAssembly modules."
keywords = ["wasm", "webassembly", "abi", "sandbox", "sdk"]
categories = ["wasm", "development-tools"]
