[package]
name = "policy-module"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Example Kelvane module that runs a neural policy via the host inference capability."
publish = false

[dependencies]
kelvane-sdk = { path = "../../crates/kelvane-sdk" }
serde_json = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
